Fixed navigation overflow and other tweaks.

--- a/sass/base/typography.scss
+++ b/sass/base/typography.scss
@@ -250,19 +250,12 @@ a {
         display: block;
         font-size: 18px;
         line-height: 1;
-        padding: 13px 15px 15px;
+        padding: 20px 15px;
         transition: background-color 0.5s ease;
 
         @media only screen and (max-width: 700px) {
-            background-color: lighten($color__primary, 7%);
-        }
-
-
-        &:hover {
-
-            @media only screen and (max-width: 700px) {
-                background-color: lighten($color__primary, 14%);
-            }
+            border-radius: 80px;
+            font-size: 17px;
         }
     }
 }
