--- a/sass/rows/row__color--dark.scss
+++ b/sass/rows/row__color--dark.scss
@@ -77,7 +77,16 @@
         background-color: transparentize($row-color-light, 0.3);
     }
 
-    .phone-number-link,
+
+    .phone-number-link {
+        color: transparentize($row-color-light, 0.2);
+
+        @media #{$mobile} {
+            background-color: $row-color-accent;
+            color: $row-color-light;
+        }
+    }
+
     .social-link {
         color: $row-color-light;
     }
